# Luk

./: .gitignore  Ai.py  Modelfile  commands.py  config.json  config.yaml  cr.py  interface.py  main.py  pyproject.toml  req.txt  speachtotext.py  tempCodeRunnerFile.py  texttospeach.py  tools.py  ts.py  ts2.py
AI/: aicontroller.py
AI/Gemini/: Gemini.py
AI/Local/: LocalModel.py
Command/: ExecutePlugins.py  LoadPlugin.py  ScaningDir.py
DataType/: MassiveWeightString.py  PikaType.py  PluginDataType.py
DataType/Weight/: MassiveWeightString.py  StringWeight.py
Decorators/: GeminiSendDecorator.py  Other.py  Plugin.py
Errors/: EmptyFileError.py  LoguruErrors.py  RepeatErrors.py
Other/: config.yaml  path.py  plugin_list.txt  tools.py
Plugins/: CloseApp.py  Explorer.py  MultiTools.py  TrigRJB.py  WorkSpace.py  da.py
Plugins/E/: plg.py
VoiceAi/: SpeechSynthesis.py  SpeechToText.py
allai/: Ai.py  Gemini.py  Local.py
allai/Commands/: CommandMain.py  ScaningDir.py
allai/DataType/: PikaType.py  ResponseAi.py
allai/Decorators/: GeminiSenDecorators.py
chainTextSpeach/: Player.py  SpeachText.py
ollama/: Modelfile
other/: tools.py
